--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
 <body>
     <div class="header-wrapper">
         <header id="header" class="jumbotron jumbotron-fluid text-center">
+            
+            
             <!--TODO: Combine title and logo in a single image-->
             <h1 class="logo">
                 <a href="index.html">
                     <img src="images/doglogo.jpg" width="5%" height="4%" alt="logo" />
                 </a>
-                <div class="alt-logo">PET SERVICES MANAGEMENT SYSTEM</div>
+                <div class="alt-logo">
+                    <button  class="mainbutton" onclick="document.location='index.html'">PET SERVICES MANAGEMENT SYSTEM</button>
+                </div>
                 <div class="tagline">Welcoming All Pets!</div>
             </h1>
         </header>
