--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <img src="images/doglogo.jpg" width="5%" height="4%" alt="logo" />
                 </a>
                 <div class="alt-logo">
-                    <button  class="mainbutton" onclick="document.location='index.html'">PET SERVICES MANAGEMENT SYSTEM</button>
+                    <button  class="indexbutton" onclick="document.location='index.html'">PET SERVICES MANAGEMENT SYSTEM</button>
                 </div>
                 <div class="tagline">Welcoming All Pets!</div>
             </h1>
