--- a/registercustomer.html
+++ b/registercustomer.html
@@ -89,8 +89,8 @@
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Customer</a>
                     <div class="dropdown-menu">
                         <button class="btn" id="btn" onclick="document.location='registercustomer.html'">Register Customer</button>
-                        <button class="btn" id="btn" onclick="document.location='createclass.html'">Update Customer</button>
-                        <button class="btn" id="btn" onclick="document.location='createclass.html'">Reserve Class</button>
+                        <button class="btn" id="btn" onclick="document.location='updatecustomer.html'">Update Customer</button>
+                        <button class="btn" id="btn" onclick="document.location='reserveclass.html'">Reserve Class</button>
                         <button class="btn" id="btn" onClick="document.location='createclass.html'">Cancel Class</button>
                         <button class="btn" id="btn" onclick="document.location='createclass.html'"> Reserve Kennel</button>
                         <button class="btn" id="btn" onclick="document.location='createclass.html'">Cancel Kennel</button>
