Added more pages
Added cancel kennel and reserve kennel

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                         <button class="btn" id="btn" onclick="document.location='updatecustomer.html'">Update Customer</button>
                         <button class="btn" id="btn" onclick="document.location='reserveclass.html'">Reserve Class</button>
                         <button class="btn" id="btn" onclick="document.location='cancelclass.html'">Cancel Class</button>
-                        <button class="btn" id="btn" onClick="logoutUser()"> Reserve Kennel</button>
-                        <button class="btn" id="btn" onClick="logoutUser()">Cancel Kennel</button>
+                        <button class="btn" id="btn" onclick="document.location='reservekennel.html'"> Reserve Kennel</button>
+                        <button class="btn" id="btn" onclick="document.location='cancelkennel.html'">Cancel Kennel</button>
                     </div>
                 </div> 
                     
