--- a/cancelclass1.html
+++ b/cancelclass1.html
@@ -32,7 +32,7 @@
     <script type="text/javascript" src="src/tbh.js"></script>
         <script> 
         $(function(){
-         $("#includedContent").load("cancelkennelform.html"); 
+         $("#includedContent").load("cancelclassform1.html"); 
         });
         </script>
 </head>
@@ -91,9 +91,9 @@
                         <button class="btn" id="btn" onclick="document.location='registercustomer.html'">Register Customer</button>
                         <button class="btn" id="btn" onclick="document.location='updatecustomer.html'">Update Customer</button>
                         <button class="btn" id="btn" onclick="document.location='reserveclass.html'">Reserve Class</button>
-                        <button class="btn" id="btn" onClick="document.location='cancelclass.html'">Cancel Class</button>
-                        <button class="btn" id="btn" onclick="document.location='reservekennel.html'"> Reserve Kennel</button>
-                        <button class="btn" id="btn" onclick="document.location='cancelkennel.html'">Cancel Kennel</button>
+                        <button class="btn" id="btn" onClick="document.location='cancelclass1.html'">Cancel Class</button>
+                        <button class="btn" id="btn" onclick="document.location='createclass.html'"> Reserve Kennel</button>
+                        <button class="btn" id="btn" onclick="document.location='createclass.html'">Cancel Kennel</button>
                     </div>
                 </div> 
                     
