--- a/cancelkennel1.html
+++ b/cancelkennel1.html
@@ -32,7 +32,7 @@
     <script type="text/javascript" src="src/tbh.js"></script>
         <script> 
         $(function(){
-         $("#includedContent").load("cancelclassform.html"); 
+         $("#includedContent").load("cancelkennelform1.html"); 
         });
         </script>
 </head>
@@ -92,8 +92,8 @@
                         <button class="btn" id="btn" onclick="document.location='updatecustomer.html'">Update Customer</button>
                         <button class="btn" id="btn" onclick="document.location='reserveclass.html'">Reserve Class</button>
                         <button class="btn" id="btn" onClick="document.location='cancelclass.html'">Cancel Class</button>
-                        <button class="btn" id="btn" onclick="document.location='createclass.html'"> Reserve Kennel</button>
-                        <button class="btn" id="btn" onclick="document.location='createclass.html'">Cancel Kennel</button>
+                        <button class="btn" id="btn" onclick="document.location='reservekennel.html'"> Reserve Kennel</button>
+                        <button class="btn" id="btn" onclick="document.location='cancelkennel1.html'">Cancel Kennel</button>
                     </div>
                 </div> 
                     
