Added more stuff
FInished register pet and update pet

--- a/updatepet.html
+++ b/updatepet.html
@@ -32,7 +32,7 @@
     <script type="text/javascript" src="src/tbh.js"></script>
         <script> 
         $(function(){
-         $("#includedContent").load("updatecustomerform.html"); 
+         $("#includedContent").load("updatepetform.html"); 
         });
         </script>
 </head>
