--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                         <button class="btn" id="btn" onclick="document.location='registercustomer.html'">Register Customer</button>
                         <button class="btn" id="btn" onclick="document.location='updatecustomer.html'">Update Customer</button>
                         <button class="btn" id="btn" onclick="document.location='reserveclass.html'">Reserve Class</button>
-                        <button class="btn" id="btn" onclick="document.location='cancelclass.html'">Cancel Class</button>
+                        <button class="btn" id="btn" onclick="document.location='cancelclass1.html'">Cancel Class</button>
                         <button class="btn" id="btn" onclick="document.location='reservekennel.html'"> Reserve Kennel</button>
-                        <button class="btn" id="btn" onclick="document.location='cancelkennel.html'">Cancel Kennel</button>
+                        <button class="btn" id="btn" onclick="document.location='cancelkennel1.html'">Cancel Kennel</button>
                     </div>
                 </div> 
                     
@@ -100,8 +100,8 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pet</a>
                     <div class="dropdown-menu">
-                        <button class="btn" id="btn" onclick="openLoginForm()">Register Pet</button>
-                        <button class="btn" id="btn" onclick="openRegisterForm()">Update Pet</button>
+                        <button class="btn" id="btn" onclick="document.location='registerpet.html'">Register Pet</button>
+                        <button class="btn" id="btn" onclick="document.location='updatepet.html'">Update Pet</button>
                     </div>
                 </div>    
     
