--- a/createclass.html
+++ b/createclass.html
@@ -34,7 +34,7 @@
     <script type="text/javascript" src="src/tbh.js"></script>
         <script> 
         $(function(){
-         $("#includedContent").load("createclassform.html"); 
+         $("#includedContent").load("createclassform.php"); 
         });
         </script>
 </head>
