--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                         <button class="btn" id="btn" onclick="document.location='createclass.html'">Create Class</button>
                         <button class="btn" id="btn" onclick="document.location='updateclass.html'">Update Class</button>
                         <button class="btn" id="btn" onclick="document.location='cancelclass.html'">Cancel Class</button>
+                        <button class="btn" id="btn" onclick="document.location='testing.html'">Testing</button>
+                        <button class="btn" id="btn" onclick="document.location='testing2.html'">Testing 2</button>
                     </div>
                 </div> 
                     
