--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                         <button class="btn" id="btn" onclick="document.location='registercustomer.html'">Register Customer</button>
                         <button class="btn" id="btn" onclick="document.location='updatecustomer.html'">Update Customer</button>
                         <button class="btn" id="btn" onclick="document.location='reserveclass.html'">Reserve Class</button>
-                        <button class="btn" id="btn" onclick="document.location='cancelclass.html'">Cancel Class</button>
+                        <button class="btn" id="btn" onclick="document.location='cancelclass1.html'">Cancel Class</button>
                         <button class="btn" id="btn" onclick="document.location='reservekennel.html'"> Reserve Kennel</button>
-                        <button class="btn" id="btn" onclick="document.location='cancelkennel.html'">Cancel Kennel</button>
+                        <button class="btn" id="btn" onclick="document.location='cancelkennel1.html'">Cancel Kennel</button>
                     </div>
                 </div> 
                     
