--- a/cancelclass.html
+++ b/cancelclass.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    
     <title>PET SERVICES MANAGEMENT SYSTEM</title>
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -78,6 +79,8 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kennel</a>
                     <div class="dropdown-menu">
+                        <button class="btn" id="btn" onclick="document.location='newkennel.html'">New
+                        Kennel</button>
                         <button class="btn" id="btn" onclick="document.location='kennelavailability.html'">Kennel Availability</button>
                         <button class="btn" id="btn" onclick="document.location='updatekennel.html'">Update Kennel</button>
                         <button class="btn" id="btn" onclick="document.location='cancelkennel.html'">Cancel Kennel</button>
