--- a/deletepet.html
+++ b/deletepet.html
@@ -32,7 +32,7 @@
     <script type="text/javascript" src="src/tbh.js"></script>
         <script> 
         $(function(){
-         $("#includedContent").load("updatepetform.html"); 
+         $("#includedContent").load("deletepetform.html"); 
         });
         </script>
 </head>
@@ -104,7 +104,7 @@
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pet</a>
                     <div class="dropdown-menu">
                         <button class="btn" id="btn" onclick="document.location='registerpet.html'">Register Pet</button>
-                        <button class="btn" id="btn" onclick="document.location='updatepet.html'">Update Pet</button>
+                        <button class="btn" id="btn" onclick="document.location='deletepet.html'">Delete Pet</button>
                     </div>
                 </div>
                     
