--- a/index.html
+++ b/index.html
@@ -61,8 +61,6 @@
                         <button class="btn" id="btn" onclick="document.location='createclass.html'">Create Class</button>
                         <button class="btn" id="btn" onclick="document.location='updateclass.html'">Update Class</button>
                         <button class="btn" id="btn" onclick="document.location='cancelclass.html'">Cancel Class</button>
-                        <button class="btn" id="btn" onclick="document.location='testing.html'">Testing</button>
-                        <button class="btn" id="btn" onclick="document.location='testing2.html'">Testing 2</button>
                     </div>
                 </div> 
                     
@@ -103,7 +101,7 @@
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pet</a>
                     <div class="dropdown-menu">
                         <button class="btn" id="btn" onclick="document.location='registerpet.html'">Register Pet</button>
-                        <button class="btn" id="btn" onclick="document.location='updatepet.html'">Update Pet</button>
+                        <button class="btn" id="btn" onclick="document.location='deletepet.html'">Delete Pet</button>
                     </div>
                 </div>    
     
