--- a/reservekennel.html
+++ b/reservekennel.html
@@ -104,7 +104,7 @@
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pet</a>
                     <div class="dropdown-menu">
                         <button class="btn" id="btn" onclick="document.location='registerpet.html'">Register Pet</button>
-                        <button class="btn" id="btn" onclick="document.location='updatepet.html'">Update Pet</button>
+                        <button class="btn" id="btn" onclick="document.location='deletepet.html'">Delete Pet</button>
                     </div>
                 </div>
                     
