--- a/deletepetform.html
+++ b/deletepetform.html
@@ -23,7 +23,7 @@
     
 <form method="post" action=" http://10.80.1.1:8080/api/pet/deletePet" target="hiddenFrame" >
     
-  Pet ID: <input type="number" name="petid">
+  Pet ID: <input type="number" name="id">
   <span class="error"> </span>
   <br><br>      
   <input type="submit" name="submit" value="Delete Pet"> 
