--- a/kennelavailabilityform.html
+++ b/kennelavailabilityform.html
@@ -6,7 +6,7 @@
 </head>
 <body>  
 
-<h2>Reserve Kennel</h2>
+<h2>Kennel Availability</h2>
     
 <p><span class="error">* required field</span></p>
 
